# random-projects

./: .gitignore  LICENSE  README.md  cam.dwg  dsatur.py  home.circ  main.py
2048-on-console/: Origem.c
2d-platform-game/: Animador.cpp  Animador.hpp  ArtefatoAtaque.cpp  ArtefatoAtaque.hpp  Demonio.cpp  Demonio.hpp  Entidade.cpp  Entidade.hpp  EntidadeColidivel.cpp  EntidadeColidivel.hpp  EnumeradorCodigos.hpp  Esqueleto.cpp  Esqueleto.hpp  EsqueletoNu.cpp  EsqueletoNu.hpp  EsqueletoRoupa.cpp  EsqueletoRoupa.hpp  Fantasma.cpp  Fantasma.hpp  Fase.cpp  Fase.hpp  Fase1.cpp  Fase1.hpp  Fase2.cpp  Fase2.hpp  Fase3.cpp  Fase3.hpp  Inimigo.cpp  Inimigo.hpp  Janela.cpp  Janela.hpp  Jogador.cpp  Jogador.hpp  Ladrao.cpp  Ladrao.hpp  Lista.hpp  ListaArtefatosAtaque.cpp  ListaArtefatosAtaque.hpp  ListaEntidadesColidiveis.cpp  ListaEntidadesColidiveis.hpp  (+19 more)
MD/: grafo04.csv  grafo04_out.csv  grafo06.csv  grafo06_out.csv  grafo11_out.csv  grafo11js.py  in.csv  main.py  plotter.js
MD/envio/: grafo11.csv  io_csv.py  main.py
MD/luan/: grafoColoracao.py
computer-graphics/: .gitignore  CMakeLists.txt  Makefile
computer-graphics/source/: app_circle.c  app_circle.frag  app_circle.vert  app_clipping.c  app_clipping.frag  app_clipping.vert  app_t2.c  app_t2.frag  app_t2.vert  cglm.c  cglm.h  core.c  core.h  main.c  main.frag  main.vert
data-mining/: .gitignore  Exercício1b_Conceitos_fundamentais_de_dados.ipynb  ex1_1.ipynb  ex1_2.ipynb  ex1_3.ipynb  ex2_a.ipynb  ex2_b.ipynb  ex3.ipynb  ex4.ipynb
data-mining/datasets/: datasetCarros.csv
dsatur-algorithm/: example.py
elastic-collision/: main.cpp
exp4/: circ1.ms14  circ1.ms14 (Security copy)  circ2.ms14  circ2.ms14 (Security copy)  circ3.ms14  circ3.ms14 (Security copy)  circ4.ms14  circ4.ms14 (Security copy)  exp2.ms14  exp2.ms14 (Security copy)  exp4.py  rlp.py
md/: dsatur.py  in.csv  main.py  out.csv
ppos/: .gitignore  Makefile
ppos/source/: disk.c  disk.h  pingpong-contab-prio.c  pingpong-disco1.c  pingpong-disco2.c  pingpong-join.c  pingpong-mqueue.c  pingpong-preempcao-stress.c  pingpong-preempcao.c  pingpong-prodcons.c  pingpong-racecond.c  pingpong-scheduler.c  pingpong-semaphore.c  pingpong-sleep.c  ppos-core-aux.c  ppos-core-globals.h  ppos.h  ppos_data.h  ppos_disk.c  ppos_disk.h  queue.h  signal.c  timer.c
ppos/tests/: pingpong-contab-prio.txt  pingpong-disco1.txt  pingpong-disco2.txt  pingpong-preempcao.txt  pingpong-scheduler.txt  signal.txt
snake-artificial-intelligence/: index.html  redeneural.js  sensor.js  sketch.js  snake.js
snake-on-console/headers/: Food.h  Render.h  Snake.h  System.h
snake-on-console/source/: Food.cpp  Render.cpp  Snake.cpp  System.cpp  main.cpp
vhdl-uprocessor/: makefile  test_all.py
vhdl-uprocessor/docs/: specs.txt
vhdl-uprocessor/programs/: data0.asm  jmp_op_test.asm  jr_op_test.asm  jrl_op_test.asm  lab5.asm  lab6.asm  primos.asm  ram_test.asm
vhdl-uprocessor/src/: alu.vhd  cu.vhd  cu_top_level.vhd  demux8x1.vhd  mux2x16.vhd  mux8x16.vhd  pc.vhd  processor.vhd  ram.vhd  reg16bits.vhd  registers.vhd  rom.vhd  state_machine.vhd  tff.vhd
(+14 files in other folders)
